--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -135,7 +135,7 @@ const success = url.searchParams.get('success') === '1';
                 method="POST"
                 data-netlify="true"
                 netlify-honeypot="bot-field"
-                action="/thanks/"
+                action="/?success=1#join"
               >
                 <input type="hidden" name="form-name" value="supporters" />
                 <p class="hidden">
