--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -425,7 +425,7 @@ const success = url.searchParams.get('success') === '1';
 
         <div>
           <div class="text-sm text-white/70">Contact</div>
-          <div class="mt-2 text-sm text-white/85">Email: <a class="underline hover:text-white" href="mailto:contact@savearavalis.org">contact@savearavalis.org</a></div>
+          <div class="mt-2 text-sm text-white/85">Email: <a class="underline hover:text-white" href="mailto:contact@wearearavali.org">contact@wearearavali.org</a></div>
           <div class="mt-3 text-xs text-white/55">Your details will only be used for Aravalli conservation alerts and will not be shared.</div>
         </div>
       </div>
